--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>mStore</title>
   <link rel="stylesheet" href="style-homepage-mstore.css">
+  <link rel="stylesheet" href="fonts.css">
 </head>
 <body>
   
@@ -33,7 +34,7 @@
       </div>
 
       <div class="page-header__menu">
-        <div class="inner-center page-header--center">
+        <div class="inner-center  page-header--center">
           <p class="main-logo">mstore<span>.</span></p>
           <nav class="header-nav">
             <ul class="header-nav__list">
@@ -61,7 +62,7 @@
   
   <main>
       <div class="ad-top">
-        <div class="inner-center ad__inner--position">
+        <div class="inner-center  ad__inner--position">
           <a href="#" class="ad-top__inner">
             <p class="ad-top__text  ad-top__text--style-1">We make it easy to exprience creativity</p>
             <p class="ad-top__text  ad-top__text--style-2">Stylish<br> new<br> design.</p>
@@ -131,7 +132,7 @@
           </div>
           <ul class="products-list">
             <li>
-              <div class="products-list__items products-list__item-1">
+              <div class="products-list__items  products-list__item-1">
                 <div class="pop-up">
                   <button class="shopping-cart-card-btn  btn" type="button">
                     <img src="img/Shopping_cart_btn.png" alt="shopping cart">
@@ -150,7 +151,7 @@
               </div>
             </li>
             <li>
-              <div class="products-list__items products-list__item-2 products-list__item-hot">
+              <div class="products-list__items  products-list__item-2  products-list__item-hot">
                 <div class="pop-up">
                   <button class="shopping-cart-card-btn  btn" type="button">
                     <img src="img/Shopping_cart_btn.png" alt="shopping cart">
@@ -169,7 +170,7 @@
               </div>
             </li>
             <li>
-              <div class="products-list__items products-list__item-3">
+              <div class="products-list__items  products-list__item-3">
                 <div class="pop-up">
                   <button class="shopping-cart-card-btn  btn" type="button">
                     <img src="img/Shopping_cart_btn.png" alt="shopping cart">
@@ -188,7 +189,7 @@
               </div>
             </li>
             <li>
-              <div class="products-list__items products-list__item-4 products-list__item-new">
+              <div class="products-list__items  products-list__item-4  products-list__item-new">
                 <div class="pop-up">
                   <button class="shopping-cart-card-btn  btn" type="button">
                     <img src="img/Shopping_cart_btn.png" alt="shopping cart">
@@ -207,7 +208,7 @@
               </div>
             </li>
             <li>
-              <div class="products-list__items products-list__item-5 products-list__item-sale">
+              <div class="products-list__items  products-list__item-5  products-list__item-sale">
                 <div class="pop-up">
                   <button class="shopping-cart-card-btn  btn" type="button">
                     <img src="img/Shopping_cart_btn.png" alt="shopping cart">
@@ -226,7 +227,7 @@
               </div>
             </li>
             <li>
-              <div class="products-list__items products-list__item-6">
+              <div class="products-list__items  products-list__item-6">
                 <div class="pop-up">
                   <button class="shopping-cart-card-btn  btn" type="button">
                     <img src="img/Shopping_cart_btn.png" alt="shopping cart">
@@ -245,7 +246,7 @@
               </div>
             </li>
             <li>
-              <div class="products-list__items products-list__item-7">
+              <div class="products-list__items  products-list__item-7">
                 <div class="pop-up">
                   <button class="shopping-cart-card-btn  btn" type="button">
                     <img src="img/Shopping_cart_btn.png" alt="shopping cart">
@@ -264,7 +265,7 @@
               </div>
             </li>
             <li>
-              <div class="products-list__items products-list__item-8">
+              <div class="products-list__items  products-list__item-8">
                 <div class="pop-up">
                   <button class="shopping-cart-card-btn  btn" type="button">
                     <img src="img/Shopping_cart_btn.png" alt="shopping cart">
@@ -310,7 +311,7 @@
           </div>
            <ul class="products-list">
             <li>
-              <div class="products-list__items products-list__item-8">
+              <div class="products-list__items  products-list__item-8">
                 <div class="pop-up">
                   <button class="shopping-cart-card-btn  btn" type="button">
                     <img src="img/Shopping_cart_btn.png" alt="shopping cart">
@@ -329,7 +330,7 @@
               </div>
             </li>
             <li>
-              <div class="products-list__items products-list__item-2">
+              <div class="products-list__items  products-list__item-2">
                 <div class="pop-up">
                   <button class="shopping-cart-card-btn  btn" type="button">
                     <img src="img/Shopping_cart_btn.png" alt="shopping cart">
@@ -348,7 +349,7 @@
               </div>
             </li>
             <li>
-              <div class="products-list__items products-list__item-3">
+              <div class="products-list__items  products-list__item-3">
                 <div class="pop-up">
                   <button class="shopping-cart-card-btn  btn" type="button">
                     <img src="img/Shopping_cart_btn.png" alt="shopping cart">
@@ -393,9 +394,9 @@
               <a class="open-more" href="#">Read more</a>
             </div>
           </article>
-          <article class="blog-post blog-post-2">
+          <article class="blog-post  blog-post-2">
             <img class="blog-post-1__img" src="img/BlogPost2.jpg" alt="Lorem Ipsum Dolor Sitamet">
-            <div class="blog-post-wrapper">
+            <div class="blog-post__wrapper">
               <h1 class="blog-post__title">Lorem Ipsum Dolor Sitamet</h1>
                <div class=blog-post__info>
                 <p class=blog-post__date>Feb - 23</p>
@@ -405,9 +406,9 @@
               <a class="open-more" href="#">Read more</a>
             </div>
           </article>
-          <article class="blog-post blog-post-3">
+          <article class="blog-post  blog-post-3">
             <img class="blog-post-1__img" src="img/BlogPost3.jpg" alt="Lorem Ipsum Dolor Sitamet">
-            <div class="blog-post-wrapper">
+            <div class="blog-post__wrapper">
               <h1 class="blog-post__title">Lorem Ipsum Dolor Sitamet</h1>
                <div class=blog-post__info>
                 <p class=blog-post__date>Feb - 23</p>
@@ -436,7 +437,7 @@
   
   <footer class="footer-page">
     <div class="footer-wrapper">
-      <div class="inner-center footer-page__inner">
+      <div class="inner-center  footer-page__inner">
         <section class="footer-about">
           <p class="footer-about__logo main-logo">
             mstore<span>.</span>
@@ -450,12 +451,12 @@
             <li>Mail: <span class="footer-about__contacts--white">min101092@gmail.com</span></li>
           </ul>
           <ul class="social-networks">
-            <li class="social-networks__item social-facebook"><a href="#fb"><img src="img/Facebook.png" alt="Facebook"></a></li>
-            <li class="social-networks__item social-twitter"><a href="#tw"><img src="img/Twitter.png" alt="Twitter"></a></li>
-            <li class="social-networks__item social-instagram"><a href="#inst"><img src="img/Instagram.png" alt="Instagram"></a></li>
-            <li class="social-networks__item social-youtube"><a href="#yt"><img src="img/Youtube.png" alt="Youtube"></a></li>
-            <li class="social-networks__item social-gogle+"><a href="#g+"><img src="img/Google.png" alt="Google+"></a></li>
-            <li class="social-networks__item social-behance"><a href="#be"><img src="img/Behance.png" alt="Behance"></a></li>
+            <li class="social-networks__item  social-facebook"><a href="#fb"><img src="img/Facebook.png" alt="Facebook"></a></li>
+            <li class="social-networks__item  social-twitter"><a href="#tw"><img src="img/Twitter.png" alt="Twitter"></a></li>
+            <li class="social-networks__item  social-instagram"><a href="#inst"><img src="img/Instagram.png" alt="Instagram"></a></li>
+            <li class="social-networks__item  social-youtube"><a href="#yt"><img src="img/Youtube.png" alt="Youtube"></a></li>
+            <li class="social-networks__item  social-gogle+"><a href="#g+"><img src="img/Google.png" alt="Google+"></a></li>
+            <li class="social-networks__item  social-behance"><a href="#be"><img src="img/Behance.png" alt="Behance"></a></li>
           </ul>
         </section>
         <section class="footer-informations">
