--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="inner-center  page-header--center">
           <div class="page-header__contacts">
             <p>(+84).898.058.000</p>
-            <span>|</span>
+            <span> | </span>
             <p>min101092@gmail.com</p>
           </div>
           <div class="page-header__choice">
@@ -35,7 +35,7 @@
 
       <div class="page-header__menu">
         <div class="inner-center  page-header--center">
-          <p class="main-logo">mstore<span>.</span></p>
+          <a class="main-logo" href="index.html"><img src="img/Logo.png" alt="mstore"></a>
           <nav class="header-nav">
             <ul class="header-nav__list">
               <li class="header-nav__item"><a href="#">Home</a></li>
@@ -63,12 +63,12 @@
   <main>
       <div class="ad-top">
         <div class="inner-center  ad__inner--position">
-          <a href="#" class="ad-top__inner">
+          <div class="ad-top__inner">
             <p class="ad-top__text  ad-top__text--style-1">We make it easy to exprience creativity</p>
             <p class="ad-top__text  ad-top__text--style-2">Stylish<br> new<br> design.</p>
             <p class="ad-top__text  ad-top__text--style-3">Order online and have your products delivered to your closest store for free...</p>
             <a href="#" class="open-more">Shopping now</a>
-          </a>
+          </div>
         </div>  
       </div>
     
@@ -98,30 +98,30 @@
         <section class="inner-center  new-arrivals">
           <h2 class="visually-hidden">New arrivals</h2>
           <div class="new-arrival--left  arrival__wrapper">
-            <a href="#" class="new-arrival__link  new-arrival__item--left">
+            <div href="#" class="new-arrival__link  new-arrival__item--left">
               <h3 class="new-arrivals__title">Shirt for boy's</h3>
               <p class="new-arrivals__arrival  new-arrivals__item--red">New arrivals</p>
               <p class="new-arrivals__price  new-arrivals__item--red">$99.00</p>
               <p class="new-arrivals__short-description  new-arrivals__item--right">Refresh your wardrobe with a<br> piece from our gorgeous ready-to-wear collection, featuring beautifully crafted coats, dresses, jackets, sweaters, skirts, tops and trousers.<br> Whether you’re searching for a special occasion...</p>
               <p class="open-more">Shopping now</p>
-            </a>
+            </div>
           </div>
           <div class="new-arrival--right  arrival__wrapper">
-            <a class="new-arrival__link new-arrival__item--right" href="#">
+            <div class="new-arrival__link new-arrival__item--right" href="#">
               <h3 class="new-arrivals__title">Shirt for girl's</h3>
               <p class="new-arrivals__arrival  new-arrivals__item--blue">New arrivals</p>
               <p class="new-arrivals__price  new-arrivals__item--blue">$99.00</p>
               <p class="new-arrivals__short-description">Refresh your wardrobe with a piece from our gorgeous ready-to-wear collection, featuring beautifully crafted coats, dresses, jackets, sweaters, skirts, tops and trousers. Whether you’re searching for a special occasion...</p>
               <p class="open-more">Shopping now</p>
-            </a>
+            </div>
           </div>
           <div class="new-arrivals__shoes-collection">
-            <a class="new-arrivals__shoes-collection--link" href="#">
+            <div class="new-arrivals__shoes-collection--link" href="#">
               <h3 class="shoes-collection__title">Shoes collection</h3>
               <p class="shoes-collection__text  shoes-collection__text--style-1">new item's</p>
               <p class="shoes-collection__text  shoes-collection__text--style-2">We are delighted to reveal our campaign for the Autumn/Winter 2017 collection, styled by<br> fashion icon Caroline Issa and shot by esteemed photographer www.minsoi.com...</p>
               <p class="open-more">Shopping now</p>
-            </a>
+            </div>
           </div>
         </section>
 
@@ -439,9 +439,7 @@
     <div class="footer-wrapper">
       <div class="inner-center  footer-page__inner">
         <section class="footer-about">
-          <p class="footer-about__logo main-logo">
-            mstore<span>.</span>
-          </p>
+          <a class="footer-about__logo  main-logo" href="index.html"><img src="img/Logo-white.png" alt="mstore"></a>
           <p class="footer-about__text">
             Lorem Ipsum is simply dummy text of the print- ing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
           </p>
